--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-image": "^4.1.0",
     "react-router-dom": "^6.14.0",
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
