--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "firebase": "^9.23.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
